# ep-micro-admin/controllers/judgesController.ts
@@ -3,7 +3,7 @@ import { Request } from "../types/express";
 import { logger, STATUS } from "ep-micro-common";
 import { judgesModel } from "../models";
 import { ERRORCODE } from "../constants";
-import { judgesRepository } from "../repositories";
+import { eventsRepository, judgesRepository } from "../repositories";
 import { judgesService } from "../services";
 import { UploadedFile } from "express-fileupload";
 import { GridDefaultOptions } from "../enums";
@@ -15,14 +15,29 @@ export const judgesController = {
                 #swagger.tags = ['Judges']
                 #swagger.summary = 'Create Judge'
                 #swagger.description = 'Endpoint to Create Judge'
-                #swagger.parameters['body'] = {
-                    in: 'body',
+                #swagger.parameters['Authorization'] = {
+                    in: 'header',
                     required: true,
-                    schema: {
-                        judgeName: 'John Doe',
-                        designation: 'Judge',
-                        eventId: 'E1'
-                    }
+                    type: 'string',
+                    description: 'Bearer token for authentication'
+                }
+                #swagger.parameters['judgeName'] = {
+                    in: 'formData',
+                    required: true,
+                    type: 'string',
+                    description: 'Name of the judge'
+                }
+                #swagger.parameters['eventId'] = {
+                    in: 'formData',
+                    required: true,
+                    type: 'string',
+                    description: 'Event Id of the judge'
+                }
+                #swagger.parameters['designation'] = {
+                    in: 'formData',
+                    required: true,
+                    type: 'string',
+                    description: 'Designation of the judge'
                 }
                 #swagger.parameters['file'] = {
                     in: 'formData',
@@ -37,20 +52,20 @@ export const judgesController = {
 
             if (!file) return res.status(STATUS.BAD_REQUEST).send(ERRORCODE.JUDGES.JUDGES006);
 
+            if (["image/jpeg", "image/png", "image/jpg"].indexOf(file.mimetype) === -1) return res.status(STATUS.BAD_REQUEST).send(ERRORCODE.JUDGES.JUDGES007);
+
+            if (file.size > 5 * 1024 * 1024) return res.status(STATUS.BAD_REQUEST).send(ERRORCODE.JUDGES.JUDGES008);
+
             const { error } = judgesModel.validateCreateJudge(judge);
             if (error) {
-                if (error.details != null) {
-                    return res.status(STATUS.BAD_REQUEST).send({ 
-                        errorCode: ERRORCODE.JUDGES.JUDGES000.errorCode, 
-                        errorMessage: error.details[0].message 
-                    });
-                } else {
-                    return res.status(STATUS.BAD_REQUEST).send({ 
-                        errorCode: ERRORCODE.JUDGES.JUDGES000.errorCode, 
-                        errorMessage: error.message 
-                    });
-                }
+                return res.status(STATUS.BAD_REQUEST).send({
+                    errorCode: ERRORCODE.JUDGES.JUDGES000.errorCode,
+                    errorMessage: error.details ? error.details[0].message : error.message
+                });
             }
+
+            const eventExists = await eventsRepository.existsByEventId(judge.eventId);
+            if (!eventExists) return res.status(STATUS.BAD_REQUEST).send(ERRORCODE.EVENTS.EVENTS001);
 
             judge.createdBy = userId;
             judge.updatedBy = userId;
@@ -70,43 +85,65 @@ export const judgesController = {
         try {
             /*  
                 #swagger.tags = ['Judges']
-                #swagger.summary = 'Create Judge'
-                #swagger.description = 'Endpoint to Create Judge'
-                #swagger.parameters['body'] = {
-                    in: 'body',
+                #swagger.summary = 'Update Judge'
+                #swagger.description = 'Endpoint to Update Judge'
+                #swagger.parameters['Authorization'] = {
+                    in: 'header',
                     required: true,
-                    schema: {
-                        judgeId: 'J1',
-                        judgeName: 'John Doe',
-                        designation: 'Judge',
-                        eventId: 'E1'
-                    }
+                    type: 'string',
+                    description: 'Bearer token for authentication'
+                }
+                #swagger.parameters['Authorization'] = {
+                    in: 'header',
+                    required: true,
+                    type: 'string',
+                    description: 'Bearer token for authentication'
+                }
+                #swagger.parameters['judgeId'] = {
+                    in: 'formData',
+                    required: true,
+                    type: 'string',
+                    description: 'Id of the judge'
+                }
+                #swagger.parameters['judgeName'] = {
+                    in: 'formData',
+                    required: true,
+                    type: 'string',
+                    description: 'Name of the judge'
+                }
+                #swagger.parameters['eventId'] = {
+                    in: 'formData',
+                    required: true,
+                    type: 'string',
+                    description: 'Event Id of the judge'
+                }
+                #swagger.parameters['designation'] = {
+                    in: 'formData',
+                    required: true,
+                    type: 'string',
+                    description: 'Designation of the judge'
                 }
                 #swagger.parameters['file'] = {
                     in: 'formData',
-                    required: true,
+                    required: false,
                     type: 'file',
                     description: 'Profile picture of the judge'
                 }
             */
             const judge = new judgesModel.Judge(req.body);
             const userId = req.plainToken.user_id;
-            const file = req.files.file as UploadedFile;
+            const file = req.files && req.files.file ? req.files.file as UploadedFile : null;
 
             const { error } = judgesModel.validateUpdateJudge(judge);
             if (error) {
-                if (error.details != null) {
-                    return res.status(STATUS.BAD_REQUEST).send({ 
-                        errorCode: ERRORCODE.JUDGES.JUDGES000.errorCode, 
-                        errorMessage: error.details[0].message 
-                    });
-                } else {
-                    return res.status(STATUS.BAD_REQUEST).send({ 
-                        errorCode: ERRORCODE.JUDGES.JUDGES000.errorCode, 
-                        errorMessage: error.message 
-                    });
-                }
+                return res.status(STATUS.BAD_REQUEST).send({
+                    errorCode: ERRORCODE.JUDGES.JUDGES000.errorCode,
+                    errorMessage: error.details ? error.details[0].message : error.message
+                });
             }
+
+            const eventExists = await eventsRepository.existsByEventId(judge.eventId);
+            if (!eventExists) return res.status(STATUS.BAD_REQUEST).send(ERRORCODE.EVENTS.EVENTS001);
 
             const judgeIdExists = await judgesRepository.existsByJudgeId(judge.judgeId);
             if (!judgeIdExists) return res.status(STATUS.BAD_REQUEST).send(ERRORCODE.JUDGES.JUDGES001);
@@ -127,26 +164,24 @@ export const judgesController = {
     getJudges: async (req: Request, res: Response) => {
         try {
             /*  
-            #swagger.tags = ['Judges']
-            #swagger.summary = 'List Judges'
-            #swagger.description = 'Endpoint to List Judges with pagination'
-            #swagger.parameters['query'] = {
-                in: 'query',
-                required: false,
-                schema: {
-                    pageSize: 10,
-                    currentPage: 1,
-                    eventId: 'E1'
+                #swagger.tags = ['Judges']
+                #swagger.summary = 'List Judges'
+                #swagger.description = 'Endpoint to List Judges with pagination'
+                #swagger.parameters['Authorization'] = {
+                    in: 'header',
+                    required: true,
+                    type: 'string',
+                    description: 'Bearer token for authentication'
                 }
-            }    
             */
             const userId = req.plainToken.user_id;
-            const { pageSize = GridDefaultOptions.PAGE_SIZE, currentPage = GridDefaultOptions.CURRENT_PAGE, eventId } = req.query;
-            const judges = await judgesService.listJudges(Number(pageSize), Number(currentPage), userId, String(eventId));
+            const { pageSize = GridDefaultOptions.PAGE_SIZE, currentPage = GridDefaultOptions.CURRENT_PAGE, eventId = "" } = req.query;
+
+            const judges = await judgesService.listJudges(Number(currentPage), Number(pageSize), userId, String(eventId));
             const judgesCount = await judgesService.getJudgesCount(userId, String(eventId));
 
             return res.status(STATUS.OK).send({
-                data: { judges, judgesCount },
+                data: { judges: judges || [], judgesCount },
                 message: "Judges Fetched Successfully!"
             });
         } catch (error) {
@@ -154,22 +189,24 @@ export const judgesController = {
             res.status(STATUS.INTERNAL_SERVER_ERROR).send(ERRORCODE.JUDGES.JUDGES000);
         }
     },
+
     getJudge: async (req: Request, res: Response) => {
         try {
             /*  
-            #swagger.tags = ['Judges']
-            #swagger.summary = 'Get Judge'
-            #swagger.description = 'Endpoint to Get Judge'
-            #swagger.parameters['params'] = {
-                in: 'params',
-                required: true,
-                schema: {
-                    judgeId: 'J1'
+                #swagger.tags = ['Judges']
+                #swagger.summary = 'Get Judge'
+                #swagger.description = 'Endpoint to Get Judge'
+                #swagger.parameters['Authorization'] = {
+                    in: 'header',
+                    required: true,
+                    type: 'string',
+                    description: 'Bearer token for authentication'
                 }
-            }    
             */
             const { judgeId } = req.params;
-            if (!judgeId) return res.status(STATUS.BAD_REQUEST).send(ERRORCODE.JUDGES.JUDGES002);
+            if (!judgeId) {
+                return res.status(STATUS.BAD_REQUEST).send(ERRORCODE.JUDGES.JUDGES002);
+            }
 
             const judgeIdExists = await judgesRepository.existsByJudgeId(judgeId);
             if (!judgeIdExists) return res.status(STATUS.BAD_REQUEST).send(ERRORCODE.JUDGES.JUDGES001);
@@ -187,40 +224,40 @@ export const judgesController = {
     updateJudgeStatus: async (req: Request, res: Response) => {
         try {
             /*  
-            #swagger.tags = ['Judges']
-            #swagger.summary = 'Update Judge Status'
-            #swagger.description = 'Endpoint to Update Judge Status'
-            #swagger.parameters['body'] = {
-                in: 'body',
-                required: true,
-                schema: {
-                    judgeId: 'J1',
-                    status: 1
+                #swagger.tags = ['Judges']
+                #swagger.summary = 'Update Judge Status'
+                #swagger.description = 'Endpoint to Update Judge Status'
+                #swagger.parameters['Authorization'] = {
+                    in: 'header',
+                    required: true,
+                    type: 'string',
+                    description: 'Bearer token for authentication'
                 }
-            }    
+                #swagger.parameters['body'] = {
+                    in: 'body',
+                    required: true,
+                    schema: {
+                        judgeId: 'J1',
+                        status: 1
+                    }
+                }    
             */
             const { judgeId, status } = req.body;
             const userId = req.plainToken.user_id;
 
             const { error } = judgesModel.validateUpdateJudgeStatus(req.body);
             if (error) {
-                if (error.details != null) {
-                    return res.status(STATUS.BAD_REQUEST).send({ 
-                        errorCode: ERRORCODE.JUDGES.JUDGES000.errorCode, 
-                        errorMessage: error.details[0].message 
-                    });
-                } else {
-                    return res.status(STATUS.BAD_REQUEST).send({ 
-                        errorCode: ERRORCODE.JUDGES.JUDGES000.errorCode, 
-                        errorMessage: error.message 
-                    });
-                }
+                return res.status(STATUS.BAD_REQUEST).send({
+                    errorCode: ERRORCODE.JUDGES.JUDGES000.errorCode,
+                    errorMessage: error.details ? error.details[0].message : error.message
+                });
             }
 
             const judgeIdExists = await judgesRepository.existsByJudgeId(judgeId);
             if (!judgeIdExists) return res.status(STATUS.BAD_REQUEST).send(ERRORCODE.JUDGES.JUDGES001);
 
             await judgesService.updateJudgeStatus(judgeId, status, userId);
+
             return res.status(STATUS.OK).send({
                 data: null,
                 message: "Judge Status Updated Successfully!"
